[package]
name = "wasm-game-of-life"
version = "0.1.11"
authors = ["xiwang <daring@outlook.com>"]
edition = "2018"
description = "the game of life"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
# crate-type = ["rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
criterion = { version = "0.5.1", features = ["html_reports"]}

[[bench]]
name = "bench"
harness = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.dev]
